this is live changes commit

--- a/index.html
+++ b/index.html
@@ -6,8 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./css/index.css">
+    <script src="./js/myscript.js"></script>
 </head>
 <body>
     <h1>This is my Web site</h1>
+    <div>
+        <p>Lorem ipsum dolor sit amet, 
+            consectetur adipisicing elit. 
+            Voluptate, laudantium ipsa ullam 
+            autem consectetur dolores quas
+             officiis ipsum ex corporis expedita
+              fugiat eos nihil blanditiis sit
+               commodi vel, quos voluptatibus 
+               deserunt voluptatum. Nihil sunt
+            asperiores temporibus sed, illo
+                aspernatur fugit maxime, quo,
+                 nisi vero esse velit tempora
+                pariatur amet exercitationem.</p>
+
+    </div>
 </body>
 </html>
