--- a/index.html
+++ b/index.html
@@ -1,29 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./css/index.css">
     <script src="./js/myscript.js"></script>
 </head>
+
 <body>
     <h1>This is my Web site</h1>
     <div>
-        <p>Lorem ipsum dolor sit amet, 
-            consectetur adipisicing elit. 
-            Voluptate, laudantium ipsa ullam 
+        <p>Lorem ipsum dolor sit amet,
+            consectetur adipisicing elit.
+            Voluptate, laudantium ipsa ullam
             autem consectetur dolores quas
-             officiis ipsum ex corporis expedita
-              fugiat eos nihil blanditiis sit
-               commodi vel, quos voluptatibus 
-               deserunt voluptatum. Nihil sunt
+            officiis ipsum ex corporis expedita
+            fugiat eos nihil blanditiis sit
+            commodi vel, quos voluptatibus
+            deserunt voluptatum. Nihil sunt
             asperiores temporibus sed, illo
-                aspernatur fugit maxime, quo,
-                 nisi vero esse velit tempora
-                pariatur amet exercitationem.</p>
-
+            aspernatur fugit maxime, quo,
+            nisi vero esse velit tempora
+            pariatur amet exercitationem.</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo, aspernatur velit adipisci alias
+            voluptates itaque rem, non cupiditate eum odit, ducimus repellat quia. Explicabo quae magnam dolorum earum
+            repellat doloremque, obcaecati debitis excepturi fugiat perferendis nobis velit neque dolor eos alias
+            cupiditate voluptate. Sed cum placeat, iste accusantium quisquam tempora tenetur illum odio eveniet error
+            nulla molestiae atque nostrum, sint nihil ipsa tempore. Odit mollitia architecto aliquam autem veniam!
+            Asperiores error, aperiam doloribus officiis odio facere, illum cumque sunt dolores quia ratione aliquid?
+            Maiores dolores, ullam in inventore suscipit, autem perferendis atque enim nam nulla impedit nostrum ad
+            optio, assumenda mollitia! Possimus harum illum non? Reiciendis fugiat voluptatibus animi necessitatibus
+            praesentium ut earum nobis nemo, temporibus eveniet similique provident error mollitia qui? Dolorum
+            dignissimos dolores, laudantium, iste blanditiis ipsum dolore reiciendis doloremque totam officiis quisquam.
+            Sapiente obcaecati doloremque, ducimus enim neque reiciendis nulla dicta quidem explicabo cumque provident
+            assumenda laboriosam. Dolorum expedita voluptatum rerum fuga sed eveniet ipsam adipisci eaque sit
+            accusantium esse, aspernatur reprehenderit a totam eos ipsum ducimus? Perferendis a, facere unde quo sit eum
+            consectetur modi ullam aut inventore nostrum placeat! Ut eum repellendus in fuga eius ipsam, sapiente sequi
+            iste necessitatibus recusandae porro nam nisi voluptatem.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo cumque quod architecto natus ad, libero quidem
+            accusantium molestiae temporibus eligendi, deserunt consequuntur magnam dicta adipisci? Velit inventore,
+            possimus, deserunt animi itaque tempora neque libero optio voluptates soluta maiores? Blanditiis cum vel
+            aliquid repudiandae qui distinctio fugiat dolor nam voluptatibus quia? Ratione eos dignissimos repellendus
+            velit vel, minima maxime odio. At, aperiam perspiciatis accusamus magnam quod maiores fuga beatae
+            exercitationem iste doloremque minima! Velit, at. Voluptatem, quia, maxime et molestias nesciunt perferendis
+            labore magnam natus totam vero mollitia tempore illo. Aperiam, dicta voluptates eveniet eos quibusdam vel
+            dolor! Modi, facere. Ipsum dolor excepturi saepe eveniet, vel optio, suscipit et labore fugiat reprehenderit
+            iste, sequi voluptate dicta! A, fugiat minus libero praesentium unde dolorem! Placeat quas maxime deserunt.
+            Totam rerum porro excepturi ad numquam provident fuga dignissimos laudantium assumenda, architecto placeat
+            saepe rem, quia, quasi tempora aperiam ex sit officiis esse magnam accusamus ratione eius? Minus consequatur
+            consectetur velit ut! Voluptatibus expedita impedit fuga accusantium ratione sunt blanditiis ducimus at?
+            Nemo, earum est incidunt dolorum expedita molestias, quod eveniet non animi, tenetur a? Similique maiores,
+            ex doloremque fuga architecto alias iusto corrupti reprehenderit explicabo perspiciatis, beatae cum incidunt
+            temporibus officia dignissimos harum nostrum modi repudiandae optio quia. Esse facilis quisquam itaque natus
+            a neque fuga sint, dolor ab. Laudantium itaque in ipsam, reiciendis illo ab fuga temporibus praesentium
+            laborum delectus fugiat impedit sunt. Est, quisquam? Optio atque vero rerum magni reprehenderit cupiditate
+            fugiat quibusdam, odio consequuntur assumenda aliquid quidem inventore nihil autem aut reiciendis, velit et
+            consectetur maxime excepturi facilis. Molestiae ratione exercitationem sapiente earum, cum a qui consequatur
+            odit excepturi dignissimos explicabo autem ut laudantium, voluptate suscipit ducimus accusamus! Cum ut
+            numquam iste itaque, eum doloremque voluptatum id cumque temporibus impedit praesentium voluptate atque,
+            optio necessitatibus obcaecati iusto assumenda. Maiores, itaque.</p>
     </div>
 </body>
+
 </html>
