--- a/pages/Practical2.html
+++ b/pages/Practical2.html
@@ -4,7 +4,21 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Practical 2</title>
+    <style>
+      span{
+        color: orangered;
+      }
+      .blue{
+        color: blue;
+      }
+      .k{
+        color: cadetblue;
+      }
+      body{
+        font-size: 17px;
+      }
+    </style>
   </head>
   <body>
     <h1 style="color: red;">
@@ -13,19 +27,20 @@
     </h1>
     <h2>Output</h2>
     <pre>
-        &lt;!DOCTYPE html&gt;
-        &lt;html lang="en"&gt;
-        &lthead&gt
-            &lt;meta charset="UTF-8"&gt;
-            &lt;meta http-equiv="X-UA-Compatible" content="IE=edge"&gt;
-            &lt;meta name="viewport" content="width=device-width, initial-scale=1.0"&gt;
-            &lt;title&gt;Document&lt;/title&gt;
-        &lt;/head&gt;
-        &lt;body&gt;
-        &lt;!--this is html comment--&gt;
-        Write your content here...
-        &lt;/body&gt;
-        &lt;/html&gt;
-    </pre>
+      &lt;!DOCTYPE<span> html</span>&gt;
+      &lt;html<span> lang</span>=<span class="blue"> "en" </span>&gt;
+      &lthead&gt
+          &lt;meta<span> charset</span>=<span class="blue">"UTF-8"</span> &gt;
+  
+          &lt;meta<span> name</span>=<span class="blue"> "viewport" </span><span> content</span>=<span class="blue"> "width=device-width, initial-scale=1.0" </span>&gt;
+          &lt;title&gt;Document&lt;/title&gt;
+      &lt;/head&gt;
+      &lt;body&gt;
+      <span class="k">&lt;!--this is html comment--&gt;</span>
+      Write your content here...
+      &lt;/body&gt;
+      &lt;/html&gt;
+  </pre>
+   
   </body>
 </html>
