--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <h2>Practicals Links</h2>
     <h3><a href="./pages/Practical1.html" target="_blank"> Practical 1 Link</a></h3> 
     <h3><a href="./pages/Practical2.html" target="_blank">Practical 2 Link</a></h3>
+    <h3> <a href="./pages/Practical3.html" target="_blank">Practical 3 Link </a></h3>
     <div>
         <p>Lorem ipsum dolor sit amet,
             consectetur adipisicing elit.
