--- a/pages/Practical3.html
+++ b/pages/Practical3.html
@@ -9,6 +9,9 @@
         h1{
             color: red;
         }
+        img{
+            width: 90vw;
+        }
     </style>
 </head>
 <body>
@@ -25,5 +28,7 @@
        <b> Front end Languages:</b>
         The front end portion is built by using some languages which are discussed below:
         <ul>
+            <h2>Output:-</h2>
+            <img src="../assets/practical3.jpg" alt="">
 </body>
 </html>
