--- a/pages/Practical3.html
+++ b/pages/Practical3.html
@@ -12,6 +12,9 @@
         img{
             width: 90vw;
         }
+        ul h3{
+            text-align: center;
+        }
     </style>
 </head>
 <body>
@@ -29,6 +32,7 @@
         The front end portion is built by using some languages which are discussed below:
         <ul>
             <h2>Output:-</h2>
+            <h3>Live Page On Github</h3>
             <img src="../assets/practical3.jpg" alt="">
 </body>
 </html>
