--- a/pages/Practical1.html
+++ b/pages/Practical1.html
@@ -11,23 +11,26 @@
 <body>
     <h1>Welcome To FullStack Course</h1>
     <h2>About Course</h2>
-    <b>
-    Full stack development: </b>It refers to the development of both front end(client side) and back end(server side)
+    <p>
+
+
+        <b>Full stack development: </b>It refers to the development of both front end(client side) and back end(server side)
         portions of web application.
-    <br>
-    <br>
-      <b>  Full stack web Developers: </b>Full stack web developers have the ability to design complete web application and
+        <br>
+        <br> 
+        <b>  Full stack web Developers: </b>Full stack web developers have the ability to design complete web application and
         websites. They work on the frontend, backend, database and debugging of web application or websites.
         <br>
         <br>
-      <b>  Front end:</b>
+        <b>  Front end:</b>
         It is the visible part of website or web application which is responsible for user experience. The user directly
         interacts with the front end portion of the web application or website.
-
+        
         <br>
         <br>
-       <b> Front end Languages:</b>
+        <b> Front end Languages:</b>
         The front end portion is built by using some languages which are discussed below:
+    </p>
         <ul>
                     <br>
         <li><b> HTML:</b> HTML stands for Hyper Text Markup Language. It is used to design the front end portion of web pages using
@@ -46,8 +49,6 @@
         web-based software.
     </li>
     </ul>
-
-        </p>
 </body>
 
 </html>
