--- a/pages/Practical4.html
+++ b/pages/Practical4.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Index</title>
+    <title>Document</title>
     <style>
         body{
           /* background: url('https://source.unsplash.com/collection/190727/1600x900') no-repeat; */
-          background-color:azure;
+          background-color:rgba(255, 192, 203, 0.247);
         }
        
       h1 {
@@ -17,6 +17,7 @@
         border: 3px solid rgb(114, 38, 54);
         margin-left: 40px;
         margin-right: 40px;
+        margin-top: 30px;
       }
     
       th,td {
@@ -28,30 +29,20 @@
          margin: 30px,auto;
          border-collapse: collapse;
          background-color: white;
-
+         margin-top: 60px;
       }
       td{
        text-align: center;
       }
-      caption{
-          border: 3px solid black;
-          padding: 13px;
-          border-collapse: collapse;
-          background-color: black;
-          color: white;
-          margin-top: 50px;
-      }
     </style>
   </head>
   <body>
-    <h1>About FullStack
+    <h1>
+      Practical 4:- Create a website having list of all practical and their
+      individual practical Page links .
     </h1>
-    <p>  <b>Full stack development: </b>It refers to the development of both front end(client side) and back end(server side)
-        portions of web application.Full stack web developers have the ability to design complete web application and
-        websites. They work on the frontend, backend, database and debugging of web application or websites.</p>
     <table style="width: 100%">
-        <caption>Index Of All Practicals</caption>
-      <tr>
+      <tr style="background-color: black; color: white;">
         <th>S.No</th>
         <th>Practical Details</th>
         <th>Assign Date</th>
@@ -66,7 +57,7 @@
         </td>
         <td>11-08-2020</td>
         <td>12-08-2020</td>
-        <td><a href="./pages/Practical1.html">Link1</a></td>
+        <td><a href="./Practical1.html">Link1</a></td>
       </tr>
       <tr>
         <td>2</td>
@@ -76,7 +67,7 @@
         </td>
         <td>11-08-2020</td>
         <td>13-08-2020</td>
-        <td><a href="./pages/Practical2.html">Link2</a></td>
+        <td><a href="./Practical2.html">Link2</a></td>
       </tr>
       <tr>
         <td>3</td>
@@ -85,7 +76,7 @@
         </td>
         <td>19-08-2020</td>
         <td>26-08-2020</td>
-        <td><a href="./pages/Practical3.html">Link3</a></td>
+        <td><a href="./Practical3.html">Link3</a></td>
       </tr>
       <tr>
         <td>4</td>
@@ -94,7 +85,7 @@
         </td>
         <td>19-08-2020</td>
         <td>26-08-3020</td>
-        <td><a href="./pages/Practical4.html">Link4</a></td>
+        <td><a href="./Practical4.html">Link4</a></td>
       </tr>
       <tr>
        <td>5</td>
@@ -103,7 +94,7 @@
         </td>
         <td>19-08-2020</td>
         <td>26-08-3020</td>
-        <td><a href="./pages/Practical5.html">Link5</a></td>
+        <td><a href="./Practical5.html">Link5</a></td>
       </tr>
     </table>
   </body>
