--- a/pages/Practical4.html
+++ b/pages/Practical4.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>practical 4</title>
     <style>
         body{
           /* background: url('https://source.unsplash.com/collection/190727/1600x900') no-repeat; */
@@ -34,6 +34,10 @@
       td{
        text-align: center;
       }
+      h2,p{
+        text-align: center;
+        text-decoration: underline;
+      }
     </style>
   </head>
   <body>
@@ -41,6 +45,9 @@
       Practical 4:- Create a website having list of all practical and their
       individual practical Page links .
     </h1>
+
+    <h2>Welcome To the Live List Of All Practicals</h2>
+    <p>These All are Hosted From Git hub</p>
     <table style="width: 100%">
       <tr style="background-color: black; color: white;">
         <th>S.No</th>
