--- a/pages/Practical5.html
+++ b/pages/Practical5.html
@@ -15,8 +15,13 @@
             margin:35px;
             width:90%;
         }
+        img{
+            margin: auto;
+            width: 30%;
+        }
         h2{
             color: white;
+
         }
         h3{
             color: rgb(247, 49, 14);
@@ -31,15 +36,76 @@
         <nav>
             <img src="../assets/menue.jpg" alt="" usemap="#mymap">
             <map  name="mymap">
-                <area shape="rect" coords="110,147,284,196" href="https://www.google.com" alt="">
+                <area 
+                shape="rect" 
+                coords="9,9,139,63" 
+                href="../index.html" 
+                alt="">
 
+                <area 
+                shape="rect" 
+                coords="151,9,362,63" 
+                href="./Practical1.html" 
+                alt="">
+
+                <area 
+                shape="rect" 
+                coords="374,8,613,63" 
+                href="./Practical2.html" 
+                alt="">
+
+                <area 
+                shape="rect" 
+                coords="623,8,851,62" 
+                href="./Practical3.html" 
+                alt="">
+
+                <area 
+                shape="rect" 
+                coords="863,9,1094,64" 
+                href="./Practical4.html" 
+                alt="">
+
+                <area 
+                shape="rect" 
+                coords="1105,9,1341,61" 
+                href="./Practical5.html" 
+                alt="">
             </map>
         </nav>
     </header>
     <h2>Introduction to Front-End Technologies</h2>
     <img src="../assets/image.jpg" alt="" usemap="#mymap1">
-    <map  id="mymap1">
-        <area shape="rect" coords="683,399,917,642" href="https://www.google.com" alt="">
+    <map  name="mymap1">
+        <area
+         shape="rectangle"
+         coords="23,7,216,142"
+         href="./Html.html"
+         target="_blank"
+         alt=""
+      />
+      <area
+         shape="circle"
+         coords="358,74,121"
+         href="./CSS.html"
+         target="_blank"
+         alt=""
+      />
+      <area
+         shape="rectangle"
+         coords="30,169,212,286"
+         href="./js.html"
+         target="_blank"
+         alt=""
+      />
+      <area
+         shape="poly"
+         coords="288,192,358,173,431,191,422,255,358,279,298,256"
+         href="./bootstrap.html"
+         target="_blank"
+         alt=""
+
+
 
     </map>
     <h3>Click on any part of logo to know more about these technologies.</h3>
