--- a/pages/Practical4.html
+++ b/pages/Practical4.html
@@ -31,7 +31,7 @@
          background-color: white;
          margin-top: 60px;
       }
-      td{
+      td{ target="_blank" 
        text-align: center;
       }
       h2,p{
@@ -64,7 +64,7 @@
         </td>
         <td>11-08-2020</td>
         <td>12-08-2020</td>
-        <td><a href="./Practical1.html">Link1</a></td>
+        <td><a href="./Practical1.html" target="_blank" >Link1</a></td>
       </tr>
       <tr>
         <td>2</td>
@@ -74,7 +74,7 @@
         </td>
         <td>11-08-2020</td>
         <td>13-08-2020</td>
-        <td><a href="./Practical2.html">Link2</a></td>
+        <td><a href="./Practical2.html" target="_blank" >Link2</a></td>
       </tr>
       <tr>
         <td>3</td>
@@ -83,7 +83,7 @@
         </td>
         <td>19-08-2020</td>
         <td>26-08-2020</td>
-        <td><a href="./Practical3.html">Link3</a></td>
+        <td><a href="./Practical3.html" target="_blank" >Link3</a></td>
       </tr>
       <tr>
         <td>4</td>
@@ -92,7 +92,7 @@
         </td>
         <td>19-08-2020</td>
         <td>26-08-3020</td>
-        <td><a href="./Practical4.html">Link4</a></td>
+        <td><a href="./Practical4.html" target="_blank" >Link4</a></td>
       </tr>
       <tr>
        <td>5</td>
@@ -101,7 +101,7 @@
         </td>
         <td>19-08-2020</td>
         <td>26-08-3020</td>
-        <td><a href="./Practical5.html">Link5</a></td>
+        <td><a href="./Practical5.html" target="_blank" >Link5</a></td>
       </tr>
     </table>
   </body>
