--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       }
       table{
         border: 2px solid rgba(172, 155, 189, 0.993);
-         margin: 30px,auto;
+         margin: 30px,auto; target="_blank"
          border-collapse: collapse;
          background-color: white;
 
@@ -66,7 +66,7 @@
         </td>
         <td>11-08-2020</td>
         <td>12-08-2020</td>
-        <td><a href="./pages/Practical1.html">Link1</a></td>
+        <td><a href="./pages/Practical1.html" target="_blank">Link1</a></td>
       </tr>
       <tr>
         <td>2</td>
@@ -76,7 +76,7 @@
         </td>
         <td>11-08-2020</td>
         <td>13-08-2020</td>
-        <td><a href="./pages/Practical2.html">Link2</a></td>
+        <td><a href="./pages/Practical2.html" target="_blank">Link2</a></td>
       </tr>
       <tr>
         <td>3</td>
@@ -85,7 +85,7 @@
         </td>
         <td>19-08-2020</td>
         <td>26-08-2020</td>
-        <td><a href="./pages/Practical3.html">Link3</a></td>
+        <td><a href="./pages/Practical3.html" target="_blank">Link3</a></td>
       </tr>
       <tr>
         <td>4</td>
@@ -94,7 +94,7 @@
         </td>
         <td>19-08-2020</td>
         <td>26-08-3020</td>
-        <td><a href="./pages/Practical4.html">Link4</a></td>
+        <td><a href="./pages/Practical4.html" target="_blank">Link4</a></td>
       </tr>
       <tr>
        <td>5</td>
@@ -103,7 +103,7 @@
         </td>
         <td>19-08-2020</td>
         <td>26-08-3020</td>
-        <td><a href="./pages/Practical5.html">Link5</a></td>
+        <td><a href="./pages/Practical5.html" target="_blank">Link5</a></td>
       </tr>
     </table>
   </body>
