--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       }
       table{
         border: 2px solid rgba(172, 155, 189, 0.993);
-         margin: 30px,auto; target="_blank"
+         margin: 30px,auto; 
          border-collapse: collapse;
          background-color: white;
 
