--- a/pages/Practical5.html
+++ b/pages/Practical5.html
@@ -40,36 +40,44 @@
                 shape="rect" 
                 coords="9,9,139,63" 
                 href="../index.html" 
-                alt="">
+
+                target="_blank"
+                alt=""
+                >
 
                 <area 
                 shape="rect" 
                 coords="151,9,362,63" 
                 href="./Practical1.html" 
+                target="_blank"
                 alt="">
 
                 <area 
                 shape="rect" 
                 coords="374,8,613,63" 
                 href="./Practical2.html" 
+                target="_blank"
                 alt="">
 
                 <area 
                 shape="rect" 
                 coords="623,8,851,62" 
                 href="./Practical3.html" 
+                target="_blank"
                 alt="">
 
                 <area 
                 shape="rect" 
                 coords="863,9,1094,64" 
                 href="./Practical4.html" 
+                target="_blank"
                 alt="">
 
                 <area 
                 shape="rect" 
                 coords="1105,9,1341,61" 
                 href="./Practical5.html" 
+                target="_blank"
                 alt="">
             </map>
         </nav>
