--- a/pages/Practical6.html
+++ b/pages/Practical6.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
+
       body {
         background: rgba(128, 128, 128, 0.486);
       }
@@ -21,16 +22,19 @@
         padding: 50px;
       }
       .card {
-        border: 2px solid rgba(128, 128, 128, 0.836);
-        background: rgba(255, 255, 255, 0.842);
-        padding: 12px 14px;
-        margin: 10px;
+        /* border: 2px solid rgba(128, 128, 128, 0.836); */
+        background: rgb(255, 255, 255);
+        padding: 12px 12px;
+        margin:  15px;
         text-align: center;
         border-radius: 9px;
       }
       .container .card img {
         width: 90%;
         border-radius: 19px;
+      }
+      p{
+        text-align: center;
       }
       button {
         margin: 10px;
@@ -39,12 +43,11 @@
         background: red;
         color: white;
       }
-      button:hover{
+      button:hover {
         margin: 10px;
         padding: 8px 49px;
         border-radius: 15px;
         background: blue;
-        
       }
     </style>
   </head>
@@ -53,41 +56,37 @@
     <div class="container">
       <div class="card">
         <img src="../assets/THTML.png" alt="" />
-        <h2>Intoduction to HTML</h2>
+        <h3>Intoduction to HTML</h3>
         <p>
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perferendis
-          tempora architecto possimus! Lorem ipsum dolor sit amet consectetur
-          adipisicing elit. Cumque perspiciatis maxime voluptatum!
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur
+          est id corrupti ratione, et laudantium!
         </p>
         <button type="submit">Read More</button>
       </div>
       <div class="card">
         <img src="../assets/GSWCSS.png" alt="" />
-        <h2>Introduction to CSS</h2>
+        <h3>Introduction to CSS</h3>
         <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptate
-          tenetur sapiente itaque? Lorem ipsum dolor sit amet consectetur,
-          adipisicing elit. Maiores odio aliquam similique praesentium?
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur
+          est id corrupti ratione, et laudantium!
         </p>
         <button type="submit">Read More</button>
       </div>
       <div class="card">
         <img src="../assets/jquery.png" alt="" />
-        <h2>Intoduction to JavaScript</h2>
+        <h3>Intoduction to JavaScript</h3>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum,
-          quaerat porro. Amet! Lorem ipsum dolor sit amet consectetur
-          adipisicing elit. Nihil laborum eligendi delectus?
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur
+          est id corrupti ratione, et laudantium!
         </p>
         <button type="submit">Read More</button>
       </div>
       <div class="card">
         <img src="../assets/bootstrap.jpg" alt="" />
-        <h2>Introduction to Bootstrap</h2>
+        <h3>Introduction to Bootstrap</h3>
         <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam
-          ipsum iusto consectetur. Lorem ipsum dolor sit, amet consectetur
-          adipisicing elit. Totam architecto nostrum cum?
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quidem
+          delectus modi debitis fugiat. Tenetur, corporis.
         </p>
 
         <button type="submit">Read More</button>
