--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
           Practical 4:- Create a website having list of all practical and their individual practical Page links .
         </td>
         <td>19-08-2020</td>
-        <td>26-08-3020</td>
+        <td>26-08-2020</td>
         <td><a href="./pages/Practical4.html" target="_blank">Link4</a></td>
       </tr>
       <tr>
@@ -129,7 +129,7 @@
           Practical 5:-Create a Web-Page showing the use of Image-Map in the Web Application. 
         </td>
         <td>19-08-2020</td>
-        <td>26-08-3020</td>
+        <td>26-08-2020</td>
         <td><a href="./pages/Practical5.html" target="_blank">Link5</a></td>
       </tr>
       <tr>
@@ -138,8 +138,17 @@
           Practical 6:-Create a Card Layout using CSS layout properties. 
         </td>
         <td>25-08-2020</td>
-        <td>28-08-3020</td>
+        <td>28-08-2020</td>
         <td><a href="./pages/Practical6.html" target="_blank">Link6</a></td>
+      </tr>
+      <tr>
+        <td>7</td>
+        <td>
+          Practical 7:-Create a Web Page Layout using div tags.
+        </td>
+        <td>2-09-2020</td>
+        <td>2-09-2020</td>
+        <td><a href="./pages/Practical7.html" target="_blank">Link7</a></td>
       </tr>
     </table>
   </div>
