--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
         <td>2-09-2020</td>
         <td><a href="./pages/Practical7.html" target="_blank">Link7</a></td>
       </tr>
+      <tr>
+        <td>8</td>
+        <td>
+          Practical 8:-Create a Web Page having Fixed Navigation Bar with the given content.
+        </td>
+        <td>2-09-2020</td>
+        <td>5-09-2020</td>
+        <td><a href="./pages/Practical8.html" target="_blank">Link8</a></td>
+      </tr>
     </table>
   </div>
   </body>
