--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
       }
       td{
-       text-align: center;
+       text-align: left;
       }
       caption{
           border: 3px solid black;
