--- a/pages/Practical8.html
+++ b/pages/Practical8.html
@@ -201,10 +201,10 @@
     </div>
     <div class="sec1">
       <h2 id="s1">Team Member</h2>
-      <img src="../assets/pngwing.com.png" alt="" />
-      <img src="../assets/pngwing.com (1).png" />
-      <img src="../assets/pngwing.com (2).png" alt="" />
       <img src="../assets/pngwing.com (3).png" alt="" />
+      <img src="../assets/pngwing.com (1).png" />
+      <img src="../assets/pngegg.png" alt="" />
+      <img src="../assets/pngwing.com.png" alt="" />
     </div>
     <div class="sec2" >
       <h2  id="sec2" >About Us</h2>
