--- a/index.html
+++ b/index.html
@@ -159,6 +159,15 @@
         <td>5-09-2020</td>
         <td><a href="./pages/Practical8.html" target="_blank">Link8</a></td>
       </tr>
+      <tr>
+        <td>9</td>
+        <td>
+          Practical 9:-Create a Web Page having Fixed Navigation Bar with the given content.
+        </td>
+        <td>11-09-2020</td>
+        <td>12-09-2020</td>
+        <td><a href="./pages/Practical9.html" target="_blank">Link9</a></td>
+      </tr>
     </table>
   </div>
   </body>
