--- a/index.html
+++ b/index.html
@@ -162,7 +162,8 @@
       <tr>
         <td>9</td>
         <td>
-          Practical 9:-Create a Web Page having Fixed Navigation Bar with the given content.
+          Practical 9:-Create a Responsive Web Layout with Responsive Navigation Bar.
+
         </td>
         <td>11-09-2020</td>
         <td>12-09-2020</td>
