--- a/index.html
+++ b/index.html
@@ -169,6 +169,16 @@
         <td>12-09-2020</td>
         <td><a href="./pages/Practical9.html" target="_blank">Link9</a></td>
       </tr>
+      <tr>
+        <td>10</td>
+        <td>
+          Practical 10:-Create a Responsive Side-Bar Navigation Menu.
+
+        </td>
+        <td>13-09-2020</td>
+        <td>15-09-2020</td>
+        <td><a href="./pages/Practical10.html" target="_blank">Link10</a></td>
+      </tr>
     </table>
   </div>
   </body>
