--- a/pages/Practical10.html
+++ b/pages/Practical10.html
@@ -92,7 +92,7 @@
       .social a img{
         filter: invert(100%);
         width: 30px;
-        margin-top: 25px;
+        /* margin-top: 25px; */
         /* margin: 12px 34px; */
       }
       .show-btn,.hide-btn{
