--- a/pages/Practical10.html
+++ b/pages/Practical10.html
@@ -23,6 +23,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        position: fixed;
         /* transition: 0.8s; */
       }
       .header img {
