--- a/index.html
+++ b/index.html
@@ -179,6 +179,16 @@
         <td>15-09-2020</td>
         <td><a href="./pages/Practical10.html" target="_blank">Link10</a></td>
       </tr>
+      <tr>
+        <td>11</td>
+        <td>
+          Practical 11:-Create a Responsive Side-Bar Navigation Menu.
+
+        </td>
+        <td>23-09-2020</td>
+        <td>23-09-2020</td>
+        <td><a href="./pages/Practical11.html" target="_blank">Link11</a></td>
+      </tr>
     </table>
   </div>
   </body>
