--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
           Practical 1:-Create Your First Web page using: 1. HTML Editor 2.
           Online Sandbox Environment
         </td>
-        <td>11-08-2020</td>
-        <td>12-08-2020</td>
+        <td>11-08-2021</td>
+        <td>12-08-2021</td>
         <td><a href="./pages/Practical1.html" target="_blank">Link1</a></td>
       </tr>
       <tr>
@@ -101,8 +101,8 @@
           Practical 2:-Create a web page showing output as Html Structure using
           character Entities and span Tag.
         </td>
-        <td>11-08-2020</td>
-        <td>13-08-2020</td>
+        <td>11-08-2021</td>
+        <td>13-08-2021</td>
         <td><a href="./pages/Practical2.html" target="_blank">Link2</a></td>
       </tr>
       <tr>
@@ -110,8 +110,8 @@
         <td>
           Practical 3:-Live your First Web-Page on Git-Hub
         </td>
-        <td>19-08-2020</td>
-        <td>26-08-2020</td>
+        <td>19-08-2021</td>
+        <td>26-08-2021</td>
         <td><a href="./pages/Practical3.html" target="_blank">Link3</a></td>
       </tr>
       <tr>
@@ -119,8 +119,8 @@
         <td>
           Practical 4:- Create a website having list of all practical and their individual practical Page links .
         </td>
-        <td>19-08-2020</td>
-        <td>26-08-2020</td>
+        <td>19-08-2021</td>
+        <td>26-08-2021</td>
         <td><a href="./pages/Practical4.html" target="_blank">Link4</a></td>
       </tr>
       <tr>
@@ -128,8 +128,8 @@
         <td>
           Practical 5:-Create a Web-Page showing the use of Image-Map in the Web Application. 
         </td>
-        <td>19-08-2020</td>
-        <td>26-08-2020</td>
+        <td>19-08-2021</td>
+        <td>26-08-2021</td>
         <td><a href="./pages/Practical5.html" target="_blank">Link5</a></td>
       </tr>
       <tr>
@@ -137,8 +137,8 @@
         <td>
           Practical 6:-Create a Card Layout using CSS layout properties. 
         </td>
-        <td>25-08-2020</td>
-        <td>28-08-2020</td>
+        <td>25-08-2021</td>
+        <td>28-08-2021</td>
         <td><a href="./pages/Practical6.html" target="_blank">Link6</a></td>
       </tr>
       <tr>
@@ -146,8 +146,8 @@
         <td>
           Practical 7:-Create a Web Page Layout using div tags.
         </td>
-        <td>2-09-2020</td>
-        <td>2-09-2020</td>
+        <td>2-09-2021</td>
+        <td>2-09-2021</td>
         <td><a href="./pages/Practical7.html" target="_blank">Link7</a></td>
       </tr>
       <tr>
@@ -155,8 +155,8 @@
         <td>
           Practical 8:-Create a Web Page having Fixed Navigation Bar with the given content.
         </td>
-        <td>2-09-2020</td>
-        <td>5-09-2020</td>
+        <td>2-09-2021</td>
+        <td>5-09-2021</td>
         <td><a href="./pages/Practical8.html" target="_blank">Link8</a></td>
       </tr>
       <tr>
@@ -165,8 +165,8 @@
           Practical 9:-Create a Responsive Web Layout with Responsive Navigation Bar.
 
         </td>
-        <td>11-09-2020</td>
-        <td>12-09-2020</td>
+        <td>11-09-2021</td>
+        <td>12-09-2021</td>
         <td><a href="./pages/Practical9.html" target="_blank">Link9</a></td>
       </tr>
       <tr>
@@ -175,8 +175,8 @@
           Practical 10:-Create a Responsive Side-Bar Navigation Menu.
 
         </td>
-        <td>13-09-2020</td>
-        <td>15-09-2020</td>
+        <td>13-09-2021</td>
+        <td>15-09-2021</td>
         <td><a href="./pages/Practical10.html" target="_blank">Link10</a></td>
       </tr>
       <tr>
@@ -185,9 +185,19 @@
           Practical 11:-Create a Responsive Side-Bar Navigation Menu.
 
         </td>
-        <td>23-09-2020</td>
-        <td>23-09-2020</td>
+        <td>23-09-2021</td>
+        <td>23-09-2021</td>
         <td><a href="./pages/Practical11.html" target="_blank">Link11</a></td>
+      </tr>
+      <tr>
+        <td>12</td>
+        <td>
+          Practical 12:-Create a Table that represent Live Practical Book Records.
+
+        </td>
+        <td>30-09-2021</td>
+        <td>3-10-2021</td>
+        <td><a href="./pages/Practical12.html" target="_blank">Link12</a></td>
       </tr>
     </table>
   </div>
