--- a/pages/Practical12.html
+++ b/pages/Practical12.html
@@ -54,6 +54,9 @@
         #right{
             margin-right: 6px;
         }
+        #right:hover,#delete:hover{
+            color: black;
+        }
         
 
     </style>
@@ -88,10 +91,10 @@
             </td>
             <td>
                 <label class="check-btn" for="chk" onclick="checkMe(document.getElementById('ch'),document.getElementById('unch'),document.getElementById('too'),document.getElementById('chk'))"> 
-                    <i class="fa fa-pencil" id="right"></i>
+                    <i class="fa fa-pencil" id="right"  title="Edit"></i>
                 </label>
                     <label class="del-btn" for="del" onclick="checkMe2(document.getElementById('ch'),document.getElementById('unch'),document.getElementById('too'),document.getElementById('del'))">
-                        <i class="fa fa-trash" id="delete"></i>
+                        <i class="fa fa-trash" id="delete"  title="Delete"></i>
                     </label>
             </td>
           </tr>
@@ -112,10 +115,10 @@
             </td>
             <td>
                 <label  for="chk2" onclick="checkMe(document.getElementById('ch2'),document.getElementById('unch2'),document.getElementById('too2'),document.getElementById('chk2'))"> 
-                    <i class="fa fa-pencil" id="right"></i>
+                    <i class="fa fa-pencil" id="right"   title="Edit"></i>
                 </label>
                     <label  for="del2" onclick="checkMe2(document.getElementById('ch2'),document.getElementById('unch2'),document.getElementById('too2'),document.getElementById('del2'))">
-                        <i class="fa fa-trash" id="delete"></i>
+                        <i class="fa fa-trash" id="delete" title="Delete"></i>
                     </label>
             </td>
           </tr>
@@ -135,10 +138,10 @@
             </td>
             <td>
                   <label  for="chk3" onclick="checkMe(document.getElementById('ch3'),document.getElementById('unch3'),document.getElementById('too3'),document.getElementById('chk3'))"> 
-                    <i class="fa fa-pencil" id="right"></i>
+                    <i class="fa fa-pencil" id="right"   title="Edit"></i>
                 </label>
                     <label  for="del3" onclick="checkMe2(document.getElementById('ch3'),document.getElementById('unch3'),document.getElementById('too3'),document.getElementById('del3'))">
-                        <i class="fa fa-trash" id="delete"></i>
+                        <i class="fa fa-trash" id="delete" title="Delete"></i>
                     </label>
             </td>
           </tr>
@@ -158,10 +161,10 @@
             </td>
             <td>
                   <label  for="chk4" onclick="checkMe(document.getElementById('ch4'),document.getElementById('unch4'),document.getElementById('too4'),document.getElementById('chk4'))"> 
-                    <i class="fa fa-pencil" id="right"></i>
+                    <i class="fa fa-pencil" id="right"   title="Edit"></i>
                 </label>
                     <label  for="del4" onclick="checkMe2(document.getElementById('ch4'),document.getElementById('unch4'),document.getElementById('too4'),document.getElementById('del4'))">
-                        <i class="fa fa-trash" id="delete"></i>
+                        <i class="fa fa-trash" id="delete" title="Delete"></i>
                     </label>
             </td>
           </tr>
@@ -181,10 +184,10 @@
             </td>
             <td>
                   <label  for="chk5" onclick="checkMe(document.getElementById('ch5'),document.getElementById('unch5'),document.getElementById('too5'),document.getElementById('chk5'))"> 
-                    <i class="fa fa-pencil" id="right"></i>
+                    <i class="fa fa-pencil" id="right"   title="Edit"></i>
                 </label>
                     <label  for="del5" onclick="checkMe2(document.getElementById('ch5'),document.getElementById('unch5'),document.getElementById('too5'),document.getElementById('del5'))">
-                        <i class="fa fa-trash" id="delete"></i>
+                        <i class="fa fa-trash" id="delete" title="Delete"></i>
                     </label>
             </td>
           </tr>
@@ -204,10 +207,10 @@
             </td>
             <td>
                   <label  for="chk6" onclick="checkMe(document.getElementById('ch6'),document.getElementById('unch6'),document.getElementById('too6'),document.getElementById('chk6'))"> 
-                    <i class="fa fa-pencil" id="right"></i>
+                    <i class="fa fa-pencil" id="right"   title="Edit"></i>
                 </label>
                     <label  for="del6" onclick="checkMe2(document.getElementById('ch6'),document.getElementById('unch6'),document.getElementById('too6'),document.getElementById('del6'))">
-                        <i class="fa fa-trash" id="delete"></i>
+                        <i class="fa fa-trash" id="delete" title="Delete"></i>
                     </label>
             </td>
           </tr>
@@ -226,10 +229,10 @@
                 <p id="too7">Select any tool</p></td>
             <td>
                   <label  for="chk7" onclick="checkMe(document.getElementById('ch7'),document.getElementById('unch7'),document.getElementById('too7'),document.getElementById('chk7'))"> 
-                    <i class="fa fa-pencil" id="right"></i>
+                    <i class="fa fa-pencil" id="right"   title="Edit"></i>
                 </label>
                     <label  for="del7" onclick="checkMe2(document.getElementById('ch7'),document.getElementById('unch7'),document.getElementById('too7'),document.getElementById('del7'))">
-                        <i class="fa fa-trash" id="delete"></i>
+                        <i class="fa fa-trash" id="delete" title="Delete"></i>
                     </label></td>
           </tr>
           <tr>
@@ -247,10 +250,10 @@
                 <p id="too8">Select any tool</p></td>
             <td>
                   <label  for="chk8" onclick="checkMe(document.getElementById('ch8'),document.getElementById('unch8'),document.getElementById('too8'),document.getElementById('chk8'))"> 
-                    <i class="fa fa-pencil" id="right"></i>
+                    <i class="fa fa-pencil" id="right"   title="Edit"></i>
                 </label>
                     <label  for="del8" onclick="checkMe2(document.getElementById('ch8'),document.getElementById('unch8'),document.getElementById('too8'),document.getElementById('del8'))">
-                        <i class="fa fa-trash" id="delete"></i>
+                        <i class="fa fa-trash" id="delete" title="Delete"></i>
                     </label></td>
           </tr>
           <tr>
@@ -270,10 +273,10 @@
             </td>
             <td>
                   <label  for="chk9" onclick="checkMe(document.getElementById('ch9'),document.getElementById('unch9'),document.getElementById('too9'),document.getElementById('chk9'))"> 
-                    <i class="fa fa-pencil" id="right"></i>
+                    <i class="fa fa-pencil" id="right"   title="Edit"></i>
                 </label>
                     <label  for="del9" onclick="checkMe2(document.getElementById('ch9'),document.getElementById('unch9'),document.getElementById('too9'),document.getElementById('del9'))">
-                        <i class="fa fa-trash" id="delete"></i>
+                        <i class="fa fa-trash" id="delete" title="Delete"></i>
                     </label>
             </td>
           </tr>
@@ -294,10 +297,10 @@
             </td>
             <td>
                   <label  for="chk10" onclick="checkMe(document.getElementById('ch10'),document.getElementById('unch10'),document.getElementById('too10'),document.getElementById('chk10'))"> 
-                    <i class="fa fa-pencil" id="right"></i>
+                    <i class="fa fa-pencil" id="right"   title="Edit"></i>
                 </label>
                     <label  for="del10" onclick="checkMe2(document.getElementById('ch10'),document.getElementById('unch10'),document.getElementById('too10'),document.getElementById('del10'))">
-                        <i class="fa fa-trash" id="delete"></i>
+                        <i class="fa fa-trash" id="delete" title="Delete"></i>
                     </label>
             </td>
           </tr>
@@ -318,10 +321,10 @@
             </td>
             <td>
                   <label  for="chk11" onclick="checkMe(document.getElementById('ch11'),document.getElementById('unch11'),document.getElementById('too11'),document.getElementById('chk11'))"> 
-                    <i class="fa fa-pencil" id="right"></i>
+                    <i class="fa fa-pencil" id="right"   title="Edit"></i>
                 </label>
                     <label  for="del11" onclick="checkMe2(document.getElementById('ch11'),document.getElementById('unch11'),document.getElementById('too11'),document.getElementById('del11'))">
-                        <i class="fa fa-trash" id="delete"></i>
+                        <i class="fa fa-trash" id="delete" title="Delete"></i>
                     </label>
             </td>
           </tr>
@@ -342,10 +345,10 @@
             </td>
             <td>
                   <label  for="chk12" onclick="checkMe(document.getElementById('ch12'),document.getElementById('unch12'),document.getElementById('too12'),document.getElementById('chk12'))"> 
-                    <i class="fa fa-pencil" id="right"></i>
+                    <i class="fa fa-pencil" id="right"   title="Edit"></i>
                 </label>
                     <label  for="del12" onclick="checkMe2(document.getElementById('ch12'),document.getElementById('unch12'),document.getElementById('too12'),document.getElementById('del12'))">
-                        <i class="fa fa-trash" id="delete"></i>
+                        <i class="fa fa-trash" id="delete" title="Delete"></i>
                     </label>
             </td>
           </tr>
