--- a/index.html
+++ b/index.html
@@ -199,6 +199,17 @@
         <td>3-10-2021</td>
         <td><a href="./pages/Practical12.html" target="_blank">Link12</a></td>
       </tr>
+      <tr>
+        <td>12</td>
+        <td>
+          Practical 13:-Create a Custom Price Table Template.
+
+
+        </td>
+        <td>4-10-2021</td>
+        <td>4-10-2021</td>
+        <td><a href="./pages/Practical 13.html" target="_blank">Link13</a></td>
+      </tr>
     </table>
   </div>
   </body>
