--- a/pages/Practical14.html
+++ b/pages/Practical14.html
@@ -35,7 +35,7 @@
     <p id="para">0</p>
     <button type="button" id="plus">+</button>
 
-    <script>
+    <!-- <script>
         var b = document.getElementById("neg");
         var b1 = document.getElementById("plus"),
         count = 0;
@@ -59,6 +59,6 @@
           document.getElementById('para').innerHTML =count;
           b.style.background="yellow";
         };
-    </script>
+    </script> -->
   </body>
 </html>
