--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
         </td>
         <td>11-11-2021</td>
         <td>19-11-2021</td>
-        <td><a href="./pages/Practical15.html" target="_blank">Link15</a></td>
+        <td><a href="./pages/practical15.html" target="_blank">Link15</a></td>
       </tr>
     </table>
   </div>
