--- a/index.html
+++ b/index.html
@@ -242,6 +242,16 @@
         <td>15-11-2021</td>
         <td><a href="./pages/fullstack.html" target="_blank">final practical</a></td>
       </tr>
+      <tr>
+        <td>17</td>
+        <td>
+            FullStack FInal Practical
+
+        </td>
+        <td>15-11-2021</td>
+        <td>15-11-2021</td>
+        <td><a href="./pages/aditya.html" target="_blank">aditya</a></td>
+      </tr>
     </table>
   </div>
   </body>
